split ini parser into a separate file, allow ini comments

--- a/default.ini
+++ b/default.ini
@@ -1,11 +1,13 @@
-font=firamono.ttf
-fontsize=16
-headerfont=roboto.ttf
-headerfontsize=36
-bgcolor=15,15,31
-txtcolor=255,255,255
-graytxt=127,127,127
-lightgraytxt=191,191,191
-scrollsensitivity=36
-width=1600
-height=900
+; These are the default values for all configuration keys
+; FYI the defaults are not pulled from here
+font=firamono.ttf        ; Primary editor font; path to an existing TTF file
+fontsize=16              ; This font's size in pt (can be a float)
+headerfont=roboto.ttf    ; Header font; path to an existing TTF file
+headerfontsize=36        ; This font's size in pt (can be a float)
+bgcolor=15,15,31         ; Default background color, format: R,G,B
+txtcolor=255,255,255     ; Primary text color (editor text, header, title menu options)
+graytxt=127,127,127      ; Secondary text color (unhighlighted line numbers)
+lightgraytxt=191,191,191 ; Lighter secondary text color (highlighted line number, cursor color)
+scrollsensitivity=36     ; Scroll value multiplier (because SDL is just weird with scrolling), can be a float
+width=1600               ; Window width in px (must be an int)
+height=900               ; Window height in px (must be an int)
