--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,10 @@
         "__verbose_abort": "cpp",
         "execution": "cpp",
         "ios": "cpp",
-        "locale": "cpp"
+        "locale": "cpp",
+        "ranges": "cpp",
+        "system_error": "cpp",
+        "deque": "cpp",
+        "__tree": "cpp"
     }
 }
